k8s/overlays/bare-metal/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olympis-server
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: server
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
