k8s/overlays/bare-metal/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olympis-server
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: null
