k8s/overlays/bare-metal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olympis-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - gce.olympisai.com
      secretName: olympis-tls-secret
  rules:
    - host: gce.olympisai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: olympis-server
                port:
                  number: 8000
